@@ -230,11 +230,11 @@ ioncat: version $(NETCDF_INTERFACE) $(MPI_INTERFACE) $(FDF) $(WXML) \
 #
 DENCHAR_OBJS = m_denchar_init.o m_denchar_geom.o m_denchar_io.o \
                m_denchar_neighb.o m_denchar_work.o \
-               denchar.o flib_spline.o
+               denchar.o 
 #
 m_denchar_io.o m_denchar_init.o denchar.o : $(FDF)
 #
-OTHER_DENCHAR_OBJS=  precision.o recipes.o \
+OTHER_DENCHAR_OBJS=  precision.o recipes.o alloc.o \
         f2kcli.o bessph.o chkdim.o dismin.o  dot.o iodm.o memory.o \
         paste.o  radfft.o io.o  spatial.o flib_spline.o\
         volcel.o parallel.o parallelsubs.o memoryinfo.o sys.o listsc.o  \
